--- a/sources/leddevice/CMakeLists.txt
+++ b/sources/leddevice/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(
 	dev_spi
 	dev_rpi_pwm
 	dev_tinker
+	dev_ftdi
 )
 
 FILE ( GLOB Leddevice_SOURCES
@@ -43,6 +44,10 @@ if ( ENABLE_SPIDEV )
 	FILE ( GLOB Leddevice_SPI_SOURCES "${CURRENT_SOURCE_DIR}/dev_spi/*.h" "${CURRENT_SOURCE_DIR}/dev_spi/*.cpp")
 endif()
 
+if (ENABLE_FTDIDEV)
+	FILE ( GLOB Leddevice_FTDI_SOURCES "${CURRENT_SOURCE_DIR}/dev_ftdi/*.h" "${CURRENT_SOURCE_DIR}/dev_ftdi/*.cpp")
+endif()
+
 if ( ENABLE_WS281XPWM )
 	include_directories(../../dependencies/external/rpi_ws281x)
 	FILE ( GLOB Leddevice_PWM_SOURCES "${CURRENT_SOURCE_DIR}/dev_rpi_pwm/*.h" "${CURRENT_SOURCE_DIR}/dev_rpi_pwm/*.cpp")
@@ -58,6 +63,7 @@ SET( Leddevice_SOURCES
 	${Leddevice_TINKER_SOURCES}
 	${Leddevice_SPI_SOURCES}
 	${Leddevice_PWM_SOURCES}
+	${Leddevice_FTDI_SOURCES}
 )
 
 # auto generate header file that include all available leddevice headers
@@ -123,4 +129,13 @@ endif()
 
 if(USE_PRECOMPILED_HEADERS AND COMMAND target_precompile_headers)
     target_precompile_headers(leddevice REUSE_FROM precompiled_hyperhdr_headers)
+endif()
+
+
+if( ENABLE_FTDIDEV )
+	FIND_PACKAGE(PkgConfig REQUIRED)
+	pkg_check_modules(LIB_FTDI REQUIRED libftdi1)
+	add_library(libftdi1 SHARED IMPORTED)
+	target_include_directories(leddevice PUBLIC ${LIB_FTDI_INCLUDE_DIRS})
+	target_link_libraries(leddevice ${LIB_FTDI_LINK_LIBRARIES})
 endif()
